--- a/src/componentes/Main.css
+++ b/src/componentes/Main.css
@@ -6,8 +6,7 @@ main{
 }
 .estudante-box{
     border: 0.2rem solid #f0f0f0;
-    padding: 
-    ;
+    padding: 4rem;
     display: flex;
     flex-direction: column;
     align-items: center;
