--- a/src/componentes/Main.css
+++ b/src/componentes/Main.css
@@ -12,6 +12,21 @@ main{
     align-items: center;
     max-width: min-content;
 }
+.informacoes{
+    width: 100%;
+}
 .estudante-foto{
     border-radius: 50%;
+}
+.estudante_descricao{
+    text-align: justify;
+}
+
+.link-git{
+    background-color: #000028;
+    color: #f0f0f0;
+    border-radius: 0.3rem;
+    padding: 1rem 1.5rem;
+    text-decoration: none;
+    font-weight: 500;
 }
