--- a/src/componentes/Main.css
+++ b/src/componentes/Main.css
@@ -3,30 +3,7 @@ main{
     min-height: 20rem;
     border: 0.1rem solid red;
     padding: 5vw;
-}
-.estudante-box{
-    border: 0.2rem solid #f0f0f0;
-    padding: 4rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: min-content;
-}
-.informacoes{
-    width: 100%;
-}
-.estudante-foto{
-    border-radius: 50%;
-}
-.estudante_descricao{
-    text-align: justify;
-}
-
-.link-git{
-    background-color: #000028;
-    color: #f0f0f0;
-    border-radius: 0.3rem;
-    padding: 1rem 1.5rem;
-    text-decoration: none;
-    font-weight: 500;
+    gap: 0.5rem;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
